test/fail/import-dup.rnp
import { add, add } from './module-FIXTURE.rnp';
---
 --> fail/import-dup.rnp:1:15
  |
1 | import { add, add } from './module-FIXTURE.rnp';
  |               ^^^ Cannot shadow or redeclare add
  |
